// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render argument 1`] = `
<div>
  <Group
    separator=" "
  >
    <span>
      <Styled(Name)>
        Foo
      </Styled(Name)>
      :
    </span>
    <Styled(Type)>
      Array
    </Styled(Type)>
     — 
    <Markdown
      inline={true}
      text="Converts foo to bar"
    />
  </Group>
</div>
`;

exports[`should render argument without description 1`] = `
<div>
  <Group
    separator=" "
  >
    <span>
      <Styled(Name)>
        Foo
      </Styled(Name)>
      :
    </span>
    <Styled(Type)>
      Array
    </Styled(Type)>
  </Group>
</div>
`;

exports[`should render argument without type 1`] = `
<div>
  <Group
    separator=" "
  >
    <span>
      <Styled(Name)>
        Foo
      </Styled(Name)>
    </span>
    <Markdown
      inline={true}
      text="Converts foo to bar"
    />
  </Group>
</div>
`;

exports[`should render default value of argument 1`] = `
<div>
  <Group
    separator=" "
  >
    <Styled(Type)>
      String
      =bar
    </Styled(Type)>
     — 
    <Markdown
      inline={true}
      text="Converts foo to bar"
    />
  </Group>
</div>
`;

exports[`should render default value of optional argument 1`] = `
<div>
  <Group
    separator=" "
  >
    <Styled(Type)>
      Boolean
      ?
      =true
    </Styled(Type)>
     — 
    <Markdown
      inline={true}
      text="Converts foo to bar"
    />
  </Group>
</div>
`;

exports[`should render optional argument 1`] = `
<div>
  <Group
    separator=" "
  >
    <Styled(Type)>
      Array
      ?
    </Styled(Type)>
     — 
    <Markdown
      inline={true}
      text="Converts foo to bar"
    />
  </Group>
</div>
`;

exports[`should render return value 1`] = `
<div>
  <Group
    separator=" "
  >
    Returns
    <Styled(Type)>
      Array
    </Styled(Type)>
     — 
    <Markdown
      inline={true}
      text="Converts foo to bar"
    />
  </Group>
</div>
`;

exports[`should render with block styles 1`] = `
<div
  className="block"
>
  <Group
    separator=" "
  />
</div>
`;
